[tool.poetry]
name = "tps"
version = "1.0.0"
description = "Thin plate spline transfomer implementation"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
